--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ header ul li a {
     border: none;
    }
 
+   .hubspot {
+       padding: 15px;
+   }
+
    .logo {
        padding-top: 15px;
    }
@@ -109,3 +113,53 @@ header ul li a {
     color: rgb(46, 46, 46);
     -webkit-appearance: none;
 }
+
+.hero {
+    margin-top: 50px;
+    background-image: url(img/jumbotron.png);
+    background-size: 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 475px;
+}
+
+.hubspot-button-2 {
+    background-color:rgba(254,119,90,255);
+    color: rgb(255, 255, 255);
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 20px;
+   }
+
+.hero .container h1 {
+    padding-top: 30px;
+    width: 50%;
+    color: rgba(51,71,91,255);
+    font-size: 45px;
+}
+
+.hero .container p {
+    padding-top: 30px;
+    width: 50%;
+    color: rgba(51,71,91,255);
+    font-size: 15px;
+}
+
+.hero .container h5 {
+    padding-top: 30px;
+    width: 50%;
+    color: rgba(51,71,91,255);
+    font-size: 10px;
+}
+
+.wait-zone {
+    height: 60px;
+    background-color: rgb(187, 233, 228);
+    border-top: 2px solid rgba(51,71,91,255);
+    border-bottom: 2px solidrgba(51,71,91,255);
+    ;
+}
+
+
+
